<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MapsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/icon_back"
            android:contentDescription="@string/back_button_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="4dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/zoom_buttons_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="setZoomButtonsEnabled"
                        android:text="@string/zoom_buttons" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:background="#AA000000"
                android:padding="8dp"
                android:layout_marginEnd="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#AA000000"
                    android:padding="16dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Distance"
                            android:textColor="#ffffff"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/distance"
                            android:text="@string/_0_km"
                            android:textColor="#ffffff"
                            android:textSize="24sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/duration"
                            android:textColor="#ffffff"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/duration_text"
                            android:text="@string/_00_00"
                            android:textColor="#ffffff"
                            android:textSize="24sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calories"
                            android:textColor="#ffffff"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/calories_text"
                            android:text="@string/_0_cal"
                            android:textColor="#ffffff"
                            android:textSize="24sp" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:id="@+id/start_button"
                    android:layout_marginTop="8dp"
                    android:background="@color/common_google_signin_btn_text_light_default"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>
